--- a/gllacy/index.html
+++ b/gllacy/index.html
@@ -295,6 +295,6 @@
         </div>
       </form>
     </section>
-    <script src="js/min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
